/* Inicial DDL para Plataforma Libro de Clases Digital - 2026-03-22 */

CREATE TABLE usuarios (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  correo varchar(255) UNIQUE NOT NULL,
  password_hash varchar(255) NOT NULL,
  nombre varchar(100),
  apellido varchar(100),
  telefono varchar(50),
  rol varchar(30),
  activo boolean DEFAULT true,
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now()
);

CREATE TABLE estudiantes (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  usuario_id BIGINT UNIQUE NOT NULL REFERENCES usuarios(id) ON DELETE CASCADE,
  apoderado_id BIGINT NOT NULL REFERENCES apoderados(id),
  nro_matricula varchar(50) UNIQUE,
  fecha_nacimiento date,
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now()
);

CREATE TABLE docentes (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  usuario_id BIGINT UNIQUE NOT NULL REFERENCES usuarios(id) ON DELETE CASCADE,
  nro_empleado varchar(50) UNIQUE,
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now()
);

CREATE TABLE apoderados (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  usuario_id BIGINT UNIQUE NOT NULL REFERENCES usuarios(id) ON DELETE CASCADE,
  rut varchar(20) UNIQUE,
  telefono_emergencia varchar(50),
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now()
);



CREATE TABLE anio_lectivo (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre varchar(20) NOT NULL,
  inicio date,
  fin date
);

CREATE TABLE cursos (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  nombre varchar(100) NOT NULL,
  nivel varchar(50),
  anio_lectivo_id BIGINT REFERENCES anio_lectivo(id) ON DELETE SET NULL,
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now()
);

CREATE TABLE asignaturas (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  codigo varchar(50),
  nombre varchar(100) NOT NULL,
  descripcion text
);

CREATE TABLE asignatura_curso (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  curso_id BIGINT NOT NULL REFERENCES cursos(id) ON DELETE CASCADE,
  asignatura_id BIGINT NOT NULL REFERENCES asignaturas(id) ON DELETE CASCADE,
  docente_id BIGINT REFERENCES docentes(id),
  CONSTRAINT uq_asig_cur UNIQUE(curso_id, asignatura_id)
);

CREATE TABLE matriculas (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  estudiante_id BIGINT NOT NULL REFERENCES estudiantes(id) ON DELETE CASCADE,
  curso_id BIGINT NOT NULL REFERENCES cursos(id) ON DELETE CASCADE,
  fecha_matricula date DEFAULT now(),
  estado varchar(30) DEFAULT 'MATRICULADO',
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now(),
  CONSTRAINT uq_matricula UNIQUE(estudiante_id, curso_id)
);

CREATE TABLE sesiones (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  curso_id BIGINT NOT NULL REFERENCES cursos(id) ON DELETE CASCADE,
  asignatura_id BIGINT REFERENCES asignaturas(id),
  docente_id BIGINT REFERENCES docentes(id),
  fecha date,
  hora_inicio time,
  hora_termino time,
  tema text,
  creado_en timestamptz DEFAULT now(),
  actualizado_en timestamptz DEFAULT now()
);

CREATE TABLE asistencias (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  sesion_id BIGINT NOT NULL REFERENCES sesiones(id) ON DELETE CASCADE,
  estudiante_id BIGINT NOT NULL REFERENCES estudiantes(id) ON DELETE CASCADE,
  estado varchar(30) NOT NULL,
  registrado_por BIGINT REFERENCES usuarios(id),
  registrado_en timestamptz DEFAULT now(),
  CONSTRAINT uq_asistencia UNIQUE(sesion_id, estudiante_id)
);

CREATE TABLE anotaciones (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  estudiante_id BIGINT NOT NULL REFERENCES estudiantes(id) ON DELETE CASCADE,
  docente_id BIGINT REFERENCES docentes(id),
  fecha date,
  tipo varchar(50),
  descripcion text,
  gravedad varchar(20),
  creado_en timestamptz DEFAULT now()
);

CREATE TABLE evaluaciones (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  titulo varchar(255),
  descripcion text,
  fecha date,
  peso numeric DEFAULT 1,
  asignatura_curso_id BIGINT REFERENCES asignatura_curso(id) ON DELETE SET NULL,
  creado_en timestamptz DEFAULT now()
);

CREATE TABLE calificaciones (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  evaluacion_id BIGINT NOT NULL REFERENCES evaluaciones(id) ON DELETE CASCADE,
  estudiante_id BIGINT NOT NULL REFERENCES estudiantes(id) ON DELETE CASCADE,
  nota numeric,
  registrado_en timestamptz DEFAULT now(),
  CONSTRAINT uq_nota UNIQUE(evaluacion_id, estudiante_id)
);

CREATE TABLE mensajes (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  remitente_id BIGINT REFERENCES usuarios(id),
  asunto varchar(255),
  cuerpo text,
  enviado_en timestamptz DEFAULT now()
);

CREATE TABLE destinatarios_mensaje (
  mensaje_id BIGINT NOT NULL REFERENCES mensajes(id) ON DELETE CASCADE,
  destinatario_id BIGINT NOT NULL REFERENCES usuarios(id) ON DELETE CASCADE,
  leido_en timestamptz,
  PRIMARY KEY(mensaje_id, destinatario_id)
);

CREATE TABLE adjuntos (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  mensaje_id BIGINT REFERENCES mensajes(id) ON DELETE CASCADE,
  nombre_archivo varchar(255),
  tipo_contenido varchar(100),
  ruta text,
  subido_por BIGINT REFERENCES usuarios(id),
  subido_en timestamptz DEFAULT now()
);

CREATE TABLE auditoria_borrados (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  tabla varchar(100) NOT NULL,
  registro_id BIGINT,
  usuario_id BIGINT,
  fecha_borrado timestamptz DEFAULT now(),
  motivo text
);

CREATE INDEX idx_matriculas_estudiante ON matriculas(estudiante_id);
CREATE INDEX idx_asistencias_sesion ON asistencias(sesion_id);
CREATE INDEX idx_calificaciones_estudiante ON calificaciones(estudiante_id);
CREATE INDEX idx_estudiantes_apoderado ON estudiantes(apoderado_id);
