@startuml er_model
hide circle
skinparam linetype ortho

entity "usuarios" as usuarios {
  *id : BIGINT
  --
  correo
  password_hash
  nombre
  apellido
  rol
}

entity "estudiantes" as estudiantes {
  *id : BIGINT
  --
  usuario_id
  apoderado_id
  nro_matricula
  fecha_nacimiento
}

entity "docentes" as docentes {
  *id : BIGINT
  --
  usuario_id
  nro_empleado
}

entity "anio_lectivo" as ay {
  *id : BIGINT
  --
  nombre
  inicio
  fin
}

entity "cursos" as cursos {
  *id : BIGINT
  --
  nombre
  nivel
  anio_lectivo_id
}

entity "asignaturas" as asignaturas {
  *id : BIGINT
  --
  codigo
  nombre
}

entity "asignatura_curso" as ac {
  *id : BIGINT
  --
  curso_id
  asignatura_id
  docente_id
}

entity "matriculas" as matriculas {
  *id : BIGINT
  --
  estudiante_id
  curso_id
  fecha_matricula
}

entity "sesiones" as sesiones {
  *id : BIGINT
  --
  curso_id
  asignatura_id
  docente_id
  fecha
}

entity "asistencias" as asistencias {
  *id : BIGINT
  --
  sesion_id
  estudiante_id
  estado
}

entity "anotaciones" as anotaciones {
  *id : BIGINT
  --
  estudiante_id
  docente_id
  fecha
  tipo
}

entity "evaluaciones" as evaluaciones {
  *id : BIGINT
  --
  titulo
  fecha
  peso
  asignatura_curso_id
}

entity "calificaciones" as calificaciones {
  *id : BIGINT
  --
  evaluacion_id
  estudiante_id
  nota
}

entity "mensajes" as mensajes {
  *id : BIGINT
  --
  remitente_id
  asunto
  cuerpo
}

entity "destinatarios_mensaje" as dest {
  --
  mensaje_id
  destinatario_id
}

entity "apoderados" as apoderados {
  *id : BIGINT
  --
  usuario_id
  rut
  telefono_emergencia
}



usuarios ||--o{ estudiantes 
usuarios ||--o{ docentes 
usuarios ||--o{ apoderados 
apoderados ||--o{ estudiantes 
cursos }o--|| ay
cursos ||--o{ ac
asignaturas ||--o{ ac
ac ||--o{ sesiones
matriculas }o--|| estudiantes
matriculas }o--|| cursos
sesiones ||--o{ asistencias
evaluaciones ||--o{ calificaciones
estudiantes ||--o{ calificaciones
estudiantes ||--o{ anotaciones
docentes ||--o{ anotaciones
mensajes ||--o{ dest
usuarios ||--o{ mensajes : "envía"
dest }o--|| usuarios : "recibe"
@enduml
